--- a/Manuscript/GBF_Nat_02.tex
+++ b/Manuscript/GBF_Nat_02.tex
@@ -300,10 +300,59 @@ We can derive the average fitness of a strategy $i$ from this equation,
 We can write this equation as,
 \[f_i(x)=\sum_{j=1}^{n}a_{i,j}x_j\]
 and the average fitness of a population is given by
-\[\bar{f}=x_1f_1+x_2f_2+.....+x_nf_n= \sum_{i=1}^{n}x_if_i \]
+\[\bar{f}=x_1f_1+x_2f_2+.....+x_nf_n= \sum_{i=1}^{n}x_if_i \]\\
+\textbf{Rock Paper Scissor Game}
+\newline
+Rock paper scissor game is a game in which there are $n=3$ strategies for each player. There are mainly three conditions,\\
+One,if rock, paper and scissor meet respectively with rock, paper and scissor, the payoff will be zero. \\
+Two, if rock meets with scissor and paper with rock and scissor with paper , they will get the highest payoff.\\
+Three, if the rock meets with paper and paper with scissor and scissor with rock, they will get the lowest payoff.\\
+Let's try to write the payoff matrix.\\
+\[
+A =
+\begin{pmatrix}
+  & R & S & P \\
+R & 0 & 1 & -1 \\
+S & -1 & 0 & 1 \\
+P & 1 & -1 & 0
+\end{pmatrix}
+\]
+Let's write the average payoff,\\
+For Rock,
+\begin{align}
+f_R &= (0)p_R + (1)p_S + (-1)p_P \nonumber\\
+f_R &= p_S - p_P \nonumber
+\end{align}
+For Scissor,
+\begin{align}
+f_S &= (-1)p_R + (0)p_S + (1)p_P \nonumber\\
+f_S &= p_P - p_R \nonumber
+\end{align}
+For Paper,
+\begin{align}
+f_P &= (1)p_R + (-1)p_S + (0)p_P \nonumber\\
+f_P &= p_R - p_S \nonumber
+\end{align}
+Now the mathematical condition for finding the internal equilibrium is,$f_R=f_S=f_P$.
+\begin{align}
+f_R &=f_S \nonumber\\
+p_S-p_P &=p_P-p_R \nonumber\\
+p_P &= \frac{p_S+p_R}{2} \label{eq:4}
+\end{align}
+\begin{align}
+f_S &=f_P \nonumber\\
+p_P-p_R &=p_R-p_S \nonumber\\
+p_R &= \frac{p_P+p_S}{2} \label{eq:5}
+\end{align}
+\begin{align}
+f_R &=f_P \nonumber\\
+p_S-p_P &=p_R-p_S \nonumber\\
+p_S &= \frac{p_R+p_P}{2} \label{eq:6}
+\end{align}
+After solving the equations \ref{eq:4}, \ref{eq:5}, \ref{eq:6}, we can say that probability of using these strategies are in symmetry because each probability can be expressed by other two probabilities and the structure of equation remains the same.\\
+So the internal equilibrium will be $p_R=p_S=p_P=\frac{1}{3}$
 
 
-\cha{Similar to above .. now I would move to a specific example... analyse the rock paper scissors game. calculate the equilibrium dynamics. How does the stability change according to the magnitudes and asymmetries of the payoffs?}
 
 
 \section{Probabilistic Dynamics}
